@@ -275,6 +275,7 @@ end
 -- Remove non-Tiberium ores from Tberium-only Nauvis
 if common.whichPlanet == "pure-nauvis" then
 	data.raw.planet["nauvis"].map_gen_settings.autoplace_settings.entity.settings["tiberium-tiber-rock"] = {}
+	data.raw.planet["nauvis"].map_gen_settings.autoplace_controls["tiber-rocks"] = {}
 	local autoplaceExceptions = {
 		["nauvis_tibGrowthNode"] = true,
 		["trees"] = true,
@@ -320,7 +321,9 @@ if common.whichPlanet == "pure-nauvis" then
 		end
 	end
 elseif common.whichPlanet == "nauvis" then
-	data.raw.planet["nauvis"].map_gen_settings.autoplace_settings.entity.settings["tiberium-tiber-rock"] = {frequency = 0}
+	--data.raw.planet["nauvis"].map_gen_settings.autoplace_settings.entity.settings["tiberium-tiber-rock"] = {frequency = 0}
+	data.raw["autoplace-control"]["tiber-rocks"] = nil
+	data.raw["simple-entity"]["tiberium-tiber-rock"] = nil
 end
 
 -- Adding Tib Science to all labs
