@@ -246,6 +246,7 @@ obelisk-damage-bonus=Obelisk of Light damage: +__1__
 [autoplace-control-names]
 tiberium-ore=[item=tiberium-ore] Green Tiberium
 tibGrowthNode=[item=tiberium-ore] Green Tiberium Fields
+tiber-rocks=Tiber Rocks
 
 [damage-type-name]
 tiberium=Tiberium
